--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.5",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "firebase": "^9.9.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -19,6 +23,7 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "sweetalert2": "^11.4.33",
+    "typescript": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
+    "@types/webpack-env": "^1.18.0"
   }
 }
